# ctfcogs

./: README.md  pyproject.toml
common/: BaseAPI.py  platform.py  types.py
ctf/: __init__.py  ctf.py
ctfd/: accounts.py
forum/: forum.py
forums/: __init__.py  forum.py  forums.py
integrations/: handler.py
platform/: BaseAPI.py  __init__.py  platform.py
