[project]
name = "ctfcogs"
version = "0.1.0"
description = "a collection of CTF related cogs for Red-DiscordBot"
authors = [{ name = "FieryRMS", email = "raiyanmohdshahrms@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "<3.12,>=3.9"
dependencies = ["red-discordbot (>=3.5.20,<4.0.0)", "pydantic (>=2.11.4,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false
